@@ -1,0 +1,38 @@
+# vim:ft=none 
+# let nextbug = 69 in
+
+OUTSTANDING BUGS
+================
+#65 Integrate French translation...
+#71 Update AMO with links to GitHub for issues
+
+LOW-KEY BUGS
+============
+#64 Add automated tests in my Makefiles to detect untranslated strings.
+#50 Refactor message display (esp. plain/text) --> use a Necko URL (and use the
+ HTML show/hide quoted text code)
+#47 0x0019 unicode char makes the innerHTML insertion phase fail
+#7 Make everything asynchronous. Start filling in messages for the first
+  query, then launch the extended query that fetches more messages, and then
+  asynchronously insert those in the right place as they arrive (i.e.
+  onItemsAdded, not onQueryCompleted). There's already that kind of logic in
+  selectionsummaries.js and we're currently duplicating it, so maybe check with
+  davida or asuth if I can refactor selectionsummaries.js to suit my needs.
+
+BUGS DUE TO THUNDERBIRD
+=======================
+#?? Sent messages do not appear in conversations until you open the "Sent"
+  folder yourself. Bug 534449.
+#29 Encoding issues (Chinese not ok, Czech not ok either, French not ok either).
+  Especially the dates. We'll that's a Thunderbird issue (a
+  XPConnect/storage-related one) that will hopefully be fixed in the next
+  release. See bug 547088.
+#12 Extension does not work with newsgroups (see bug 478167) and possibly other
+types of accounts.
+#?? Dates are incorrectly translated (some are, some are not) see bug 537401
+#?? Nasty flickering when scrolling messages with HTML display on. See
+  https://bugzilla.mozilla.org/show_bug.cgi?id=540911
+#21 Some conversations are erroneously recognized as multiple conversations
+  (esp. when you change addresses when replying).
+  https://bugzilla.mozilla.org/show_bug.cgi?id=538750, partly fixed by the
+  extension, Thunderbird patch pending.
