@@ -3,5 +3,4 @@ skin gconversation classic/1.0 jar:gconv.jar!/skin/
 resource gconversation modules/
 overlay chrome://messenger/content/messenger.xul chrome://gconversation/content/overlay.xul
 override chrome://messenger/content/multimessageview.xhtml chrome://gconversation/content/multimessageview.xhtml
-
 locale gconversation en-US jar:gconv.jar!/locale/en-US/
