@@ -66,7 +66,7 @@
         <label control="hide_quote_length_textbox" value="&option.lines;" />
       </hbox>
       <hbox align="center">
-        <description control="fold_rule_menulist">&optiondesc.unfold;</description>
+        <label control="fold_rule_menulist" value="&optiondesc.unfold;" />
         <menulist preference="fold_rule" id="fold_rule_menulist">
           <menupopup>
             <menuitem value="unread_and_last" label="&option.last_or_unread;" />
@@ -96,6 +96,7 @@
        <caption label="&title.error_messages;"/>
        <checkbox label="&option.disable_error_empty_collection;" preference="disable_error_empty_collection" id="disable_error_empty_collection_checkbox" />
      </groupbox>
+     <spacer flex="1" style="min-height: 4em" />
    </prefpane>
  
 </prefwindow>
