@@ -5,3 +5,4 @@ reply_all=reply to all
 forward=forward
 edit_new=edit as new
 reply_list=reply to list
+draft=draft
