@@ -7,6 +7,6 @@
   -moz-image-region: auto !important;
 }
 
-#gconv-button-2 {
-  list-style-image: url("chrome://gconversation/skin/buttonbig.png");
+#gconv-button-2, [place="palette"] > #gconv-button-1 {
+  list-style-image: url("chrome://gconversation/skin/buttonbig.png") !important;
 }
